--- a/Contact Us.html
+++ b/Contact Us.html
@@ -24,7 +24,7 @@
             Talk with our<br>sales team
         </h2>
         <div class="contacts">
-            <div class="contacts_email">
+            <div class="contacts_email">  <!--Email-->
                 <h2>
                     Email
                 </h2>
@@ -35,7 +35,7 @@
                     adam.abuiqran@amg.sch.ae
                 </a>
             </div>
-            <div class="contacts_number">
+            <div class="contacts_number">  <!--Number-->
                 <h2>
                     Call
                 </h2>
@@ -46,7 +46,7 @@
                     +971 50 502 9890
                 </a>
             </div>
-            <div class="contacts_sms">
+            <div class="contacts_sms">  <!--SMS-->
                 <h2>
                     SMS
                 </h2>
@@ -57,7 +57,7 @@
                     +971 50 502 9890
                 </a>
             </div>
-            <div class="contacts_social_media">
+            <div class="contacts_social_media">  <!--Social Media-->
                 <h2>
                     WhatsApp
                 </h2>
@@ -89,7 +89,7 @@
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <hr class="products_hr">
         <br>
-        <p class="Ending_text">
+        <p class="Ending_text">  <!--Ending-->
             2025, NORTHLINE COLLECTIVE<br>
             <a href="About Us.html" class="Ending_links">&bull; About Us &bull;</a>
         </p>
