--- a/About Us.html
+++ b/About Us.html
@@ -24,6 +24,7 @@
         </h2>
         <div class="Line"></div>
         <div class="Our_mission">  <!--Our Mission Box-->
+            <br>
             <h3>
                 Our Mission
             </h3>
@@ -53,7 +54,7 @@
                     2023 &mdash; Exploring New Ground: Traverse
                 </h3>
                 <p>
-                    Traverse marked our first step into outerwear and adventure-inspired styles, blending functionality with Northline’s minimalist aesthetic.
+                    Traverse marked our first step into outerwear and adventure-inspired styles, blending functionality with Northline's minimalist aesthetic.
                 </p>
             </div>
             <div class="timeline_2024">
@@ -61,7 +62,7 @@
                     2024 &mdash; Defining Heritage: Lineage
                 </h3>
                 <p>
-                    Lineage honored how far we’d come — a refined collection that merged elements from all previous releases into timeless, structured designs.
+                    Lineage honored how far we'd come — a refined collection that merged elements from all previous releases into timeless, structured designs.
                 </p>
             </div>
         </div>
