--- a/Contact Us.html
+++ b/Contact Us.html
@@ -21,7 +21,7 @@
         </a>
         <div class="intro_to_contacts_line"></div>  <!--Contact Us-->
         <h2 class="intro">
-            Talk with our<br>sales team
+            Talk with our sales team
         </h2>
         <div class="contacts">
             <div class="contacts_email">  <!--Email-->
@@ -86,10 +86,10 @@
             </div>
         </div>
         <div class="contacts_covering"></div>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <hr class="products_hr">
         <br>
-        <p class="Ending_text">  <!--Ending-->
+        <p class="Ending_text" style="color: white; position: relative; z-index: 76546767548375675483;">  <!--Ending-->
             2025, NORTHLINE COLLECTIVE<br>
             <a href="About Us.html" class="Ending_links">&bull; About Us &bull;</a>
         </p>
